appview/pages: notifications ui and templating
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/appview/pages/templates/layouts/fragments/topbar.html
+++ b/appview/pages/templates/layouts/fragments/topbar.html
@@ -10,6 +10,7 @@
             <div id="right-items" class="flex items-center gap-2">
                 {{ with .LoggedInUser }}
                     {{ block "newButton" . }} {{ end }}
+                    {{ template "notifications/fragments/bell" }}
                     {{ block "dropDown" . }} {{ end }}
                 {{ else }}
                     <a href="/login">login</a>
@@ -44,7 +45,7 @@
 {{ define "dropDown" }}
 <details class="relative inline-block text-left nav-dropdown">
     <summary
-        class="cursor-pointer list-none flex items-center"
+        class="cursor-pointer list-none flex items-center gap-1"
     >
         {{ $user := didOrHandle .Did .Handle }}
         {{ template "user/fragments/picHandle" $user }}
