--- a/appview/pages/templates/fragments/logotype.html
+++ b/appview/pages/templates/fragments/logotype.html
@@ -1,6 +1,7 @@
 {{ define "fragments/logotype" }}
   <span class="flex items-center gap-2">
-    <span class="font-bold italic">tangled</span>
+    {{ template "fragments/dolly/logo" "size-16 text-black dark:text-white" }}
+    <span class="font-bold text-4xl not-italic">tangled</span>
     <span class="font-normal not-italic text-xs rounded bg-gray-100 dark:bg-gray-700 px-1">
       alpha
     </span>
