--- a/appview/pages/templates/layouts/fragments/footer.html
+++ b/appview/pages/templates/layouts/fragments/footer.html
@@ -3,8 +3,8 @@
   <div class="container mx-auto max-w-7xl px-4">
     <div class="flex flex-col lg:flex-row justify-between items-start text-gray-600 dark:text-gray-400 text-sm gap-8">
       <div class="mb-4 md:mb-0">
-        <a href="/" hx-boost="true" class="flex gap-2 font-semibold italic">
-          tangled<sub>alpha</sub>
+        <a href="/" hx-boost="true" class="flex gap-2 font-semibold italic no-underline hover:no-underline">
+          {{ template "fragments/logotypeSmall" }}
         </a>
       </div>
 
