--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -85,7 +85,7 @@
           {{ range $k, $valset := .Labels.Inner }}
             {{ $d := index $.LabelDefs $k }}
             {{ range $v, $s := $valset }}
-              {{ template "labels/fragments/label" (dict "def" $d "val" $v) }}
+              {{ template "labels/fragments/label" (dict "def" $d "val" $v "withPrefix" true) }}
             {{ end }}
           {{ end }}
         {{ end }}
