appview/{pages,middleware}: serve go-import tags for tangled.org as well
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/appview/pages/templates/repo/fragments/meta.html
+++ b/appview/pages/templates/repo/fragments/meta.html
@@ -23,4 +23,8 @@
         name="go-import"
         content="tangled.sh/{{ .RepoInfo.FullNameWithoutAt }} git https://tangled.sh/{{ .RepoInfo.FullName }}"
     />
+    <meta
+        name="go-import"
+        content="tangled.org/{{ .RepoInfo.FullNameWithoutAt }} git https://tangled.org/{{ .RepoInfo.FullName }}"
+    />
 {{ end }}
