appview/pages: switch to tangled.org
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/appview/pages/templates/knots/index.html
+++ b/appview/pages/templates/knots/index.html
@@ -5,7 +5,7 @@
   <h1 class="text-xl font-bold dark:text-white">Knots</h1>
   <span class="flex items-center gap-1">
       {{ i "book" "w-3 h-3" }}
-      <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/knot-hosting.md">docs</a>
+      <a href="https://tangled.org/@tangled.org/core/blob/master/docs/knot-hosting.md">docs</a>
   </span>
 </div>
 
