--- a/appview/pages/templates/repo/fragments/meta.html
+++ b/appview/pages/templates/repo/fragments/meta.html
@@ -1,23 +1,23 @@
 {{ define "repo/fragments/meta" }}
     <meta
         name="vcs:clone"
-        content="https://tangled.sh/{{ .RepoInfo.FullName }}"
+        content="https://tangled.org/{{ .RepoInfo.FullName }}"
     />
     <meta
         name="forge:summary"
-        content="https://tangled.sh/{{ .RepoInfo.FullName }}"
+        content="https://tangled.org/{{ .RepoInfo.FullName }}"
     />
     <meta
         name="forge:dir"
-        content="https://tangled.sh/{{ .RepoInfo.FullName }}/tree/{ref}/{path}"
+        content="https://tangled.org/{{ .RepoInfo.FullName }}/tree/{ref}/{path}"
     />
     <meta
         name="forge:file"
-        content="https://tangled.sh/{{ .RepoInfo.FullName }}/blob/{ref}/{path}"
+        content="https://tangled.org/{{ .RepoInfo.FullName }}/blob/{ref}/{path}"
     />
     <meta
         name="forge:line"
-        content="https://tangled.sh/{{ .RepoInfo.FullName }}/blob/{ref}/{path}#L{line}"
+        content="https://tangled.org/{{ .RepoInfo.FullName }}/blob/{ref}/{path}#L{line}"
     />
     <meta
         name="go-import"
