--- a/appview/pages/templates/repo/settings/pipelines.html
+++ b/appview/pages/templates/repo/settings/pipelines.html
@@ -22,7 +22,7 @@
       <p class="text-gray-500 dark:text-gray-400">
         Choose a spindle to execute your workflows on. Only repository owners
         can configure spindles. Spindles can be selfhosted,
-        <a class="text-gray-500 dark:text-gray-400 underline" href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">
+        <a class="text-gray-500 dark:text-gray-400 underline" href="https://tangled.org/@tangled.org/core/blob/master/docs/spindle/hosting.md">
           click to learn more.
         </a>
       </p>
