--- a/appview/pages/templates/timeline/fragments/hero.html
+++ b/appview/pages/templates/timeline/fragments/hero.html
@@ -22,7 +22,7 @@
         </div>
 
         <figure class="w-full hidden md:block md:w-auto">
-            <a href="https://tangled.sh/@tangled.sh/core" class="block">
+            <a href="https://tangled.org/@tangled.org/core" class="block">
                 <img src="https://assets.tangled.network/hero-repo.png" alt="Screenshot of the Tangled monorepo." class="max-w-md mx-auto md:max-w-none w-full md:w-[30vw] h-auto shadow-sm rounded" />
             </a>
             <figcaption class="text-sm text-gray-600 dark:text-gray-400 mt-2 text-center">
@@ -31,4 +31,3 @@
         </figure>
     </div>
 {{ end }}
-
