--- a/appview/pages/templates/timeline/timeline.html
+++ b/appview/pages/templates/timeline/timeline.html
@@ -3,7 +3,7 @@
 {{ define "extrameta" }}
     <meta property="og:title" content="timeline · tangled" />
     <meta property="og:type" content="object" />
-    <meta property="og:url" content="https://tangled.sh" />
+    <meta property="og:url" content="https://tangled.org" />
     <meta property="og:description" content="tightly-knit social coding" />
 {{ end }}
 
