--- a/appview/pages/templates/user/completeSignup.html
+++ b/appview/pages/templates/user/completeSignup.html
@@ -13,7 +13,7 @@
             />
             <meta
                 property="og:url"
-                content="https://tangled.sh/complete-signup"
+                content="https://tangled.org/complete-signup"
             />
             <meta
                 property="og:description"
