--- a/appview/pages/templates/user/signup.html
+++ b/appview/pages/templates/user/signup.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta property="og:title" content="signup · tangled" />
-            <meta property="og:url" content="https://tangled.sh/signup" />
+            <meta property="og:url" content="https://tangled.org/signup" />
             <meta property="og:description" content="sign up for tangled" />
             <script src="/static/htmx.min.js"></script>
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
@@ -52,4 +52,3 @@
         </body>
     </html>
 {{ end }}
-
