--- a/appview/pages/templates/banner.html
+++ b/appview/pages/templates/banner.html
@@ -30,7 +30,7 @@
     <div class="mx-6">
       These services may not be fully accessible until upgraded.
       <a class="underline text-red-800 dark:text-red-200"
-        href="https://tangled.sh/@tangled.sh/core/tree/master/docs/migrations.md">
+        href="https://tangled.org/@tangled.org/core/tree/master/docs/migrations.md">
         Click to read the upgrade guide</a>.
     </div>
   </details>
