--- a/appview/pages/templates/repo/fragments/og.html
+++ b/appview/pages/templates/repo/fragments/og.html
@@ -1,7 +1,7 @@
 {{ define "repo/fragments/og" }}
     {{ $title := or .Title .RepoInfo.FullName }}
     {{ $description := or .Description .RepoInfo.Description }}
-    {{ $url := or .Url (printf "https://tangled.sh/%s" .RepoInfo.FullName) }}
+    {{ $url := or .Url (printf "https://tangled.org/%s" .RepoInfo.FullName) }}
 
 
     <meta property="og:title" content="{{ unescapeHtml $title }}" />
