--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -2,7 +2,7 @@
 
 {{ define "extrameta" }}
     {{ $title := "issues"}}
-    {{ $url := printf "https://tangled.sh/%s/issues" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.org/%s/issues" .RepoInfo.FullName }}
 
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
