--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -2,7 +2,7 @@
 
 {{ define "extrameta" }}
     {{ $title := printf "commits &middot; %s" .RepoInfo.FullName }}
-    {{ $url := printf "https://tangled.sh/%s/commits" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.org/%s/commits" .RepoInfo.FullName }}
 
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
