--- a/appview/pages/templates/repo/pipelines/workflow.html
+++ b/appview/pages/templates/repo/pipelines/workflow.html
@@ -2,7 +2,7 @@
 
 {{ define "extrameta" }}
     {{ $title := "pipelines"}}
-    {{ $url := printf "https://tangled.sh/%s/pipelines" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.org/%s/pipelines" .RepoInfo.FullName }}
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
 
