--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -2,7 +2,7 @@
 
 {{ define "extrameta" }}
     {{ $title := "pulls"}}
-    {{ $url := printf "https://tangled.sh/%s/pulls" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.org/%s/pulls" .RepoInfo.FullName }}
 
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
