--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta property="og:title" content="login · tangled" />
-            <meta property="og:url" content="https://tangled.sh/login" />
+            <meta property="og:url" content="https://tangled.org/login" />
             <meta property="og:description" content="login to for tangled" />
             <script src="/static/htmx.min.js"></script>
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
